--- a/src/app/paginas/juego/DialogosEscaperoom/asignar-escenario-escaperoom/asignar-escenario-escaperoom.component.html
+++ b/src/app/paginas/juego/DialogosEscaperoom/asignar-escenario-escaperoom/asignar-escenario-escaperoom.component.html
@@ -1,41 +1,43 @@
 
 <form *ngIf="misEscenarios">
+  
+  <div style="height:400 px; overflow:auto">
+    <table align="center" mat-table [dataSource]="dataSourceMisEscenarios" class="example-container mat-elevation-z8">
 
-  <table align="center" mat-table [dataSource]="dataSourceMisEscenarios" class="example-container mat-elevation-z8">
+      <ng-container matColumnDef="select">
+        <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla">
+        </th>
+  
+        <td mat-cell *matCellDef="let row;">
+          <mat-checkbox
+                  (click)="$event.stopPropagation()"
+                  (change)="Marcar (row) "
+                  [checked]="selection.isSelected(row)">
+          </mat-checkbox>
+        </td>
+      </ng-container>
 
-    <ng-container matColumnDef="select">
-      <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla">
-      </th>
- 
-      <td mat-cell *matCellDef="let row;">
-        <mat-checkbox
-                (click)="$event.stopPropagation()"
-                (change)="Marcar (row) "
-                [checked]="selection.isSelected(row)">
-        </mat-checkbox>
-      </td>
-    </ng-container>
+      <ng-container matColumnDef="mapa">
+        <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla" style="text-align: left !important;"> Nombre </th>
+        <td mat-cell *matCellDef="let escenario"> {{escenario.Nombre}} </td>
+      </ng-container>
 
-    <ng-container matColumnDef="mapa">
-      <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla" style="text-align: left !important;"> Nombre </th>
-      <td mat-cell *matCellDef="let escenario"> {{escenario.Nombre}} </td>
-    </ng-container>
+      <ng-container matColumnDef="descripcion">
+        <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla" style="text-align: left !important;"> Descripción </th>
+        <td style=" max-width: 100px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;" mat-cell *matCellDef="let escenario"> {{escenario.Descripcion}} </td>
+      </ng-container>
 
-    <ng-container matColumnDef="descripcion">
-      <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla" style="text-align: left !important;"> Descripción </th>
-      <td style=" max-width: 100px;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;" mat-cell *matCellDef="let escenario"> {{escenario.Descripcion}} </td>
-    </ng-container>
+      
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"
+          (click)="Marcar(row)">
+      </tr>
 
-    
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"
-        (click)="Marcar(row)">
-    </tr>
-
-  </table>
+    </table>  
+  </div>
 
 </form>
 
