--- a/src/app/paginas/juego/DialogosEscaperoom/asignar-escenas-escaperoom/asignar-escenas-escaperoom.component.html
+++ b/src/app/paginas/juego/DialogosEscaperoom/asignar-escenas-escaperoom/asignar-escenas-escaperoom.component.html
@@ -11,33 +11,36 @@
               <i class="material-icons" matSuffix>search</i>
             </mat-form-field>
           </div>
-          <table align="center" mat-table [dataSource]="dataSourceEscenasDeEscenario" class="example-container mat-elevation-z8">
+          
+          <div style="height:400 px; overflow:auto">
+            <table align="center" mat-table [dataSource]="dataSourceEscenasDeEscenario" class="example-container mat-elevation-z8">
 
-        <ng-container matColumnDef="select">
-          <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla">
-          </th>
-    
-          <td mat-cell *matCellDef="let row;">
-            <mat-checkbox
-                    (click)="$event.stopPropagation()"
-                    (change)="Marcar (row) "
-                    [checked]="selection.isSelected(row)">
-            </mat-checkbox>
-          </td>
-        </ng-container>
+          <ng-container matColumnDef="select">
+            <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla">
+            </th>
+      
+            <td mat-cell *matCellDef="let row;">
+              <mat-checkbox
+                      (click)="$event.stopPropagation()"
+                      (change)="Marcar (row) "
+                      [checked]="selection.isSelected(row)">
+              </mat-checkbox>
+            </td>
+          </ng-container>
 
-        <ng-container matColumnDef="Nombre">
-          <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla" style="text-align: left !important;"> Nombre </th>
-          <td mat-cell *matCellDef="let escena"> {{escena.Nombre}} </td>
-        </ng-container>
+          <ng-container matColumnDef="Nombre">
+            <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla" style="text-align: left !important;"> Nombre </th>
+            <td mat-cell *matCellDef="let escena"> {{escena.Nombre}} </td>
+          </ng-container>
 
-        
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"
-            (click)="Marcar(row)">
-        </tr>
+          
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"
+              (click)="Marcar(row)">
+          </tr>
 
-          </table>
+            </table>
+          </div>
         </div>
         <div *ngIf="tengoEscena" style="width:30% ;">
           <span *ngIf="tengoEscena" style="font-weight: bold;color:black;">Nombre: {{escenaAgregada.Nombre}}</span>
