--- a/src/app/paginas/juego/DialogosEscaperoom/asignar-objetos-escaperoom/asignar-objetos-escaperoom.component.html
+++ b/src/app/paginas/juego/DialogosEscaperoom/asignar-objetos-escaperoom/asignar-objetos-escaperoom.component.html
@@ -11,33 +11,36 @@
                 <i class="material-icons" matSuffix>search</i>
               </mat-form-field>
             </div>
-            <table align="center" mat-table [dataSource]="dataSourceObjetos" class="example-container mat-elevation-z8">
-  
-          <ng-container matColumnDef="select">
-            <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla">
-            </th>
-      
-            <td mat-cell *matCellDef="let row;">
-              <mat-checkbox
-                      (click)="$event.stopPropagation()"
-                      (change)="Marcar (row) "
-                      [checked]="selection.isSelected(row)">
-              </mat-checkbox>
-            </td>
-          </ng-container>
-  
-          <ng-container matColumnDef="Nombre">
-            <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla" style="text-align: left !important;"> Nombre </th>
-            <td mat-cell *matCellDef="let objeto"> {{objeto.Nombre}} </td>
-          </ng-container>
-  
-          
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns;"
-              (click)="Marcar(row)">
-          </tr>
-  
-            </table>
+            
+            <div style="height:400 px; overflow:auto">
+              <table align="center" mat-table [dataSource]="dataSourceObjetos" class="example-container mat-elevation-z8">
+    
+            <ng-container matColumnDef="select">
+              <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla">
+              </th>
+        
+              <td mat-cell *matCellDef="let row;">
+                <mat-checkbox
+                        (click)="$event.stopPropagation()"
+                        (change)="Marcar (row) "
+                        [checked]="selection.isSelected(row)">
+                </mat-checkbox>
+              </td>
+            </ng-container>
+    
+            <ng-container matColumnDef="Nombre">
+              <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla" style="text-align: left !important;"> Nombre </th>
+              <td mat-cell *matCellDef="let objeto"> {{objeto.Nombre}} </td>
+            </ng-container>
+    
+            
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"
+                (click)="Marcar(row)">
+            </tr>
+    
+              </table>            
+            </div>
           </div>
           <div *ngIf="tengoObjeto" style="width:30% ;">
             <span *ngIf="tengoObjeto" style="font-weight: bold;color:black;">Nombre: {{objetoMostrar.Nombre}}</span>
