--- a/src/app/paginas/mis-escenarios-escaperoom/mis-mapas-escaperoom/mis-mapas-escaperoom.component.html
+++ b/src/app/paginas/mis-escenarios-escaperoom/mis-mapas-escaperoom/mis-mapas-escaperoom.component.html
@@ -15,45 +15,48 @@
               <i class="material-icons" matSuffix>search</i>
             </mat-form-field>
           </div>
-          <table style = "width: 80%" align= "center" mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+          
+          <div style="height:400 px; overflow:auto">
+            <table style = "width: 80%" align= "center" mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
 
-            <ng-container matColumnDef="nombre">
-              <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla"> Nombre </th>
-              <td mat-cell *matCellDef="let Escenario"> {{Escenario.Nombre}} </td>
-            </ng-container>
+              <ng-container matColumnDef="nombre">
+                <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla"> Nombre </th>
+                <td mat-cell *matCellDef="let Escenario"> {{Escenario.Nombre}} </td>
+              </ng-container>
 
 
 
 
 
-            <ng-container matColumnDef="iconos">
-                <th  mat-header-cell *matHeaderCellDef class="tituloColumnaTabla"></th>
-                <td  mat-cell *matCellDef="let escenario">
-                  <div align="right">
-                    <button  (click) = "VerEscenas(escenario)" mat-icon-button matTooltip="Ver el escenario">
-                      <i class="material-icons green md-36">edit</i>
-                    </button>
-                    <button (click) = "AbrirDialogoConfirmacionBorrarEscenario(escenario)" mat-icon-button matTooltip="Eliminar el escenario">
-                      <i class="material-icons red md-36">delete</i>
-                    </button>
-                    <button (click) = "Descargar(escenario)" mat-icon-button matTooltip="Descargar recursos del escenario">
-                      <i class="material-icons blue md-36">get_app</i>
-                    </button>
-                    <button *ngIf = "!escenario.Publica" (click) = "HazPublico(escenario)" mat-icon-button matTooltip="Haz público el escenario">
-                      <i class="material-icons grey md-36">public_off</i>
-                    </button>
-                    <button *ngIf = "escenario.Publica" (click) = "HazPrivado(escenario)" mat-icon-button matTooltip="Haz privado el escenario">
-                      <i class="material-icons green md-36">public</i>
-                    </button>
-                  </div>
-              </td>
-            </ng-container>
+              <ng-container matColumnDef="iconos">
+                  <th  mat-header-cell *matHeaderCellDef class="tituloColumnaTabla"></th>
+                  <td  mat-cell *matCellDef="let escenario">
+                    <div align="right">
+                      <button  (click) = "VerEscenas(escenario)" mat-icon-button matTooltip="Ver el escenario">
+                        <i class="material-icons green md-36">edit</i>
+                      </button>
+                      <button (click) = "AbrirDialogoConfirmacionBorrarEscenario(escenario)" mat-icon-button matTooltip="Eliminar el escenario">
+                        <i class="material-icons red md-36">delete</i>
+                      </button>
+                      <button (click) = "Descargar(escenario)" mat-icon-button matTooltip="Descargar recursos del escenario">
+                        <i class="material-icons blue md-36">get_app</i>
+                      </button>
+                      <button *ngIf = "!escenario.Publica" (click) = "HazPublico(escenario)" mat-icon-button matTooltip="Haz público el escenario">
+                        <i class="material-icons grey md-36">public_off</i>
+                      </button>
+                      <button *ngIf = "escenario.Publica" (click) = "HazPrivado(escenario)" mat-icon-button matTooltip="Haz privado el escenario">
+                        <i class="material-icons green md-36">public</i>
+                      </button>
+                    </div>
+                </td>
+              </ng-container>
 
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;">
-            </tr>
-          </table>
+              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+              <tr mat-row *matRowDef="let row; columns: displayedColumns;">
+              </tr>
+            </table>
+          </div>
         </form>
 
         <div class="contenedor">
@@ -72,36 +75,39 @@
               <i class="material-icons" matSuffix>search</i>
             </mat-form-field>
           </div>
-          <table style = "width: 80%" align= "center" mat-table [dataSource]="dataSourcePublicas" class="mat-elevation-z8">
+          
+          <div style="height:400 px; overflow:auto">
+            <table style = "width: 80%" align= "center" mat-table [dataSource]="dataSourcePublicas" class="mat-elevation-z8">
 
-            <!-- Titulo Column -->
-            <ng-container matColumnDef="nombre">
-              <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla"> Nombre </th>
-              <td mat-cell *matCellDef="let Escenario; let i = index">
-                {{Escenario.Nombre}} 
-              </td>
+              <!-- Titulo Column -->
+              <ng-container matColumnDef="nombre">
+                <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla"> Nombre </th>
+                <td mat-cell *matCellDef="let Escenario; let i = index">
+                  {{Escenario.Nombre}} 
+                </td>
 
-            </ng-container>
+              </ng-container>
 
 
-            <ng-container matColumnDef="iconos">
-              <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla"></th>
-              <td mat-cell *matCellDef="let escenario">
-                <div align="right">
-                <button (click) = "VerEscenasPublicas(escenario)" mat-icon-button matTooltip="Ver el escenario">
-                  <i class="material-icons green md-36">visibility</i>
-                </button>
-                <button (click) = "Descargar(escenario)" mat-icon-button matTooltip="Descargar recursos del escenario">
-                  <i class="material-icons blue md-36">get_app</i>
-                </button>
-              </div>
-              </td>
-            </ng-container>
+              <ng-container matColumnDef="iconos">
+                <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla"></th>
+                <td mat-cell *matCellDef="let escenario">
+                  <div align="right">
+                  <button (click) = "VerEscenasPublicas(escenario)" mat-icon-button matTooltip="Ver el escenario">
+                    <i class="material-icons green md-36">visibility</i>
+                  </button>
+                  <button (click) = "Descargar(escenario)" mat-icon-button matTooltip="Descargar recursos del escenario">
+                    <i class="material-icons blue md-36">get_app</i>
+                  </button>
+                </div>
+                </td>
+              </ng-container>
 
-            <tr mat-header-row *matHeaderRowDef="displayedColumnsPublica"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumnsPublica;">
-            </tr>
-          </table>
+              <tr mat-header-row *matHeaderRowDef="displayedColumnsPublica"></tr>
+              <tr mat-row *matRowDef="let row; columns: displayedColumnsPublica;">
+              </tr>
+            </table>
+          </div>
         </form>
 
         <div class="contenedor">
