--- a/src/app/paginas/mis-skins-escaperoom/mis-skins-escaperoom.component.html
+++ b/src/app/paginas/mis-skins-escaperoom/mis-skins-escaperoom.component.html
@@ -15,43 +15,45 @@
               <i class="material-icons" matSuffix>search</i>
             </mat-form-field>
           </div>
-          <table style = "width: 80%" align= "center" mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+          <div style="height:400 px; overflow:auto">
+            <table style = "width: 80%" align= "center" mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
 
-            <ng-container matColumnDef="nombre">
-              <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla"> Nombre </th>
-              <td mat-cell *matCellDef="let skin"> {{skin.Nombre}} </td>
-            </ng-container>
+              <ng-container matColumnDef="nombre">
+                <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla"> Nombre </th>
+                <td mat-cell *matCellDef="let skin"> {{skin.Nombre}} </td>
+              </ng-container>
 
 
-            <ng-container matColumnDef="iconos">
-                <th  mat-header-cell *matHeaderCellDef class="tituloColumnaTabla"></th>
-                <td  mat-cell *matCellDef="let skin">
-                  <div  align="right">
-                    <button  (click) = "VerSkinDialog(skin)" mat-icon-button matTooltip="Ver la skin">
-                      <i class="material-icons green md-36">edit</i>
-                    </button>
-                    <button (click) = "AbrirDialogoConfirmacionBorrarSkin(skin)" mat-icon-button matTooltip="Eliminar la Skin">
-                      <i class="material-icons red md-36">delete</i>
-                    </button>
-                    <button (click) = "Descargar(skin)" mat-icon-button matTooltip="Descargar skin">
-                      <i class="material-icons blue md-36">get_app</i>
-                    </button>
-                   <button *ngIf = "!skin.Publica" (click) = "HazPublica(skin)" mat-icon-button matTooltip="Haz pública la skin">
-                      <i class="material-icons grey md-36">public_off</i>
-                    </button>
-                    <button *ngIf = "skin.Publica" (click) = "HazPrivada(skin)" mat-icon-button matTooltip="Haz privada la skin">
-                      <i class="material-icons green md-36">public</i>
-                    </button>
-                    
-                  </div>
-              </td>
-            </ng-container>
+              <ng-container matColumnDef="iconos">
+                  <th  mat-header-cell *matHeaderCellDef class="tituloColumnaTabla"></th>
+                  <td  mat-cell *matCellDef="let skin">
+                    <div  align="right">
+                      <button  (click) = "VerSkinDialog(skin)" mat-icon-button matTooltip="Ver la skin">
+                        <i class="material-icons green md-36">edit</i>
+                      </button>
+                      <button (click) = "AbrirDialogoConfirmacionBorrarSkin(skin)" mat-icon-button matTooltip="Eliminar la Skin">
+                        <i class="material-icons red md-36">delete</i>
+                      </button>
+                      <button (click) = "Descargar(skin)" mat-icon-button matTooltip="Descargar skin">
+                        <i class="material-icons blue md-36">get_app</i>
+                      </button>
+                    <button *ngIf = "!skin.Publica" (click) = "HazPublica(skin)" mat-icon-button matTooltip="Haz pública la skin">
+                        <i class="material-icons grey md-36">public_off</i>
+                      </button>
+                      <button *ngIf = "skin.Publica" (click) = "HazPrivada(skin)" mat-icon-button matTooltip="Haz privada la skin">
+                        <i class="material-icons green md-36">public</i>
+                      </button>
+                      
+                    </div>
+                </td>
+              </ng-container>
 
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;">
-            </tr>
-          </table>
+              <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+              <tr mat-row *matRowDef="let row; columns: displayedColumns;">
+              </tr>
+            </table>
+          </div>
         </form>
 
         <div class="contenedor">
@@ -70,36 +72,39 @@
               <i class="material-icons" matSuffix>search</i>
             </mat-form-field>
           </div>
-          <table style = "width: 80%" align= "center" mat-table [dataSource]="dataSourcePublicas" class="mat-elevation-z8">
+          
+          <div style="height:400 px; overflow:auto">
+            <table style = "width: 80%" align= "center" mat-table [dataSource]="dataSourcePublicas" class="mat-elevation-z8">
 
-            <!-- Titulo Column -->
-            <ng-container matColumnDef="nombre">
-              <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla"> Nombre </th>
-              <td mat-cell *matCellDef="let skin; let i = index">
-                {{skin.Nombre}} 
-              </td>
+              <!-- Titulo Column -->
+              <ng-container matColumnDef="nombre">
+                <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla"> Nombre </th>
+                <td mat-cell *matCellDef="let skin; let i = index">
+                  {{skin.Nombre}} 
+                </td>
 
-            </ng-container>
+              </ng-container>
 
 
-            <ng-container matColumnDef="iconos">
-              <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla"></th>
-              <td mat-cell *matCellDef="let skin">
-                <div align="right">
-                  <button (click) = "VerSkinPublicaDialog(skin)" mat-icon-button matTooltip="Ver la skin">
-                    <i class="material-icons green md-36">visibility</i>
-                  </button>
-                  <button (click) = "Descargar(skin)" mat-icon-button matTooltip="Descargar skin">
-                    <i class="material-icons blue md-36">get_app</i>
-                  </button>
-                </div>
-              </td>
-            </ng-container>
+              <ng-container matColumnDef="iconos">
+                <th mat-header-cell *matHeaderCellDef class="tituloColumnaTabla"></th>
+                <td mat-cell *matCellDef="let skin">
+                  <div align="right">
+                    <button (click) = "VerSkinPublicaDialog(skin)" mat-icon-button matTooltip="Ver la skin">
+                      <i class="material-icons green md-36">visibility</i>
+                    </button>
+                    <button (click) = "Descargar(skin)" mat-icon-button matTooltip="Descargar skin">
+                      <i class="material-icons blue md-36">get_app</i>
+                    </button>
+                  </div>
+                </td>
+              </ng-container>
 
-            <tr mat-header-row *matHeaderRowDef="displayedColumnsPublica"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumnsPublica;">
-            </tr>
-          </table>
+              <tr mat-header-row *matHeaderRowDef="displayedColumnsPublica"></tr>
+              <tr mat-row *matRowDef="let row; columns: displayedColumnsPublica;">
+              </tr>
+            </table>
+          </div>
         </form>
 
         <div class="contenedor">
