Fix overflow Tables

--- a/src/app/paginas/juego/DialogosEscaperoom/asignar-objetos-escaperoom/asignar-objetos-escaperoom.component.html
+++ b/src/app/paginas/juego/DialogosEscaperoom/asignar-objetos-escaperoom/asignar-objetos-escaperoom.component.html
@@ -12,7 +12,7 @@
               </mat-form-field>
             </div>
             
-            <div style="height:400 px; overflow:auto">
+            <div style="height:400px; overflow-y:auto">
               <table align="center" mat-table [dataSource]="dataSourceObjetos" class="example-container mat-elevation-z8">
     
             <ng-container matColumnDef="select">
