--- a/src/app/paginas/mis-escenarios-escaperoom/mis-mapas-escaperoom/mis-mapas-escaperoom.component.html
+++ b/src/app/paginas/mis-escenarios-escaperoom/mis-mapas-escaperoom/mis-mapas-escaperoom.component.html
@@ -16,7 +16,7 @@
             </mat-form-field>
           </div>
           
-          <div style="height:400 px; overflow:auto">
+          <div style="height:400px-y; overflow:auto">
             <table style = "width: 80%" align= "center" mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
 
@@ -76,7 +76,7 @@
             </mat-form-field>
           </div>
           
-          <div style="height:400 px; overflow:auto">
+          <div style="height:400px; overflow-y:auto">
             <table style = "width: 80%" align= "center" mat-table [dataSource]="dataSourcePublicas" class="mat-elevation-z8">
 
               <!-- Titulo Column -->
