--- a/src/app/paginas/juego/DialogosEscaperoom/asignar-escenas-escaperoom/asignar-escenas-escaperoom.component.html
+++ b/src/app/paginas/juego/DialogosEscaperoom/asignar-escenas-escaperoom/asignar-escenas-escaperoom.component.html
@@ -12,7 +12,7 @@
             </mat-form-field>
           </div>
           
-          <div style="height:400px; overflow-y:auto">
+          <div style="max-height:400px; overflow-y:auto">
             <table align="center" mat-table [dataSource]="dataSourceEscenasDeEscenario" class="example-container mat-elevation-z8">
 
           <ng-container matColumnDef="select">
