--- a/src/app/paginas/juego/DialogosEscaperoom/editar-preguntas-activas-escaperoom/editar-preguntas-activas-escaperoom.component.html
+++ b/src/app/paginas/juego/DialogosEscaperoom/editar-preguntas-activas-escaperoom/editar-preguntas-activas-escaperoom.component.html
@@ -10,7 +10,7 @@
               </mat-form-field>
             </div>
             
-          <div style="height:400px; overflow-y:auto">
+          <div style="max-height:400px; overflow-y:auto">
             <table align="center" mat-table [dataSource]="dataSourcePreguntas" class="example-container mat-elevation-z8" id="tablaPA">
   
           <ng-container matColumnDef="Titulo">
