--- a/src/app/paginas/juego/juego.component.html
+++ b/src/app/paginas/juego/juego.component.html
@@ -2465,7 +2465,7 @@
                     </mat-form-field>
                   </div>
                   
-                  <div style="height:400px; overflow-y:auto">
+                  <div style="max-height:400px; overflow-y:auto">
                     <table style = "width: 80%" align= "center" mat-table [dataSource]="dataSourceEscenas" class="mat-elevation-z8">
           
                       <ng-container matColumnDef="Orden">
@@ -2548,7 +2548,7 @@
                     </mat-form-field>
                   </div>
                   
-                  <div style="height:400px; overflow-y:auto">
+                  <div style="max-height:400px; overflow-y:auto">
                     <table style = "width: 80%" align= "center" mat-table [dataSource]="dataSourceEscenas" class="mat-elevation-z8">
           
                       
@@ -2608,7 +2608,7 @@
                       </mat-form-field>
                     </div>
                     
-                    <div style="height:400px; overflow-y:auto">
+                    <div style="max-height:400px; overflow-y:auto">
                       <table style = "width: 80%" align= "center" mat-table [dataSource]="dataSourceObjetosEscena" class="mat-elevation-z8">
             
                         <ng-container matColumnDef="Nombre">
@@ -2720,7 +2720,7 @@
                     </mat-form-field>
                   </div>
                   
-                  <div style="height:400px; overflow-y:auto">
+                  <div style="max-height:400px; overflow-y:auto">
                     <table style = "width: 80%" align= "center" mat-table [dataSource]="dataSourceRequisitosEscenasPuntos" class="mat-elevation-z8">
           
                       <ng-container matColumnDef="Orden Escena">
@@ -2758,7 +2758,7 @@
                     </mat-form-field>
                   </div>
                   
-                <div style="height:400px; overflow-y:auto">
+                <div style="max-height:400px; overflow-y:auto">
                   <table style = "width: 80%" align= "center" mat-table [dataSource]="dataSourceObjetosConPreguntas" class="mat-elevation-z8">
         
                     <ng-container matColumnDef="Nombre">
