--- a/src/app/paginas/mis-skins-escaperoom/mis-skins-escaperoom.component.html
+++ b/src/app/paginas/mis-skins-escaperoom/mis-skins-escaperoom.component.html
@@ -15,7 +15,7 @@
               <i class="material-icons" matSuffix>search</i>
             </mat-form-field>
           </div>
-          <div style="height:400px; overflow-y:auto">
+          <div style="max-height:400px; overflow-y:auto">
             <table style = "width: 80%" align= "center" mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
 
@@ -73,7 +73,7 @@
             </mat-form-field>
           </div>
           
-          <div style="height:400px; overflow-y:auto">
+          <div style="max-height:400px; overflow-y:auto">
             <table style = "width: 80%" align= "center" mat-table [dataSource]="dataSourcePublicas" class="mat-elevation-z8">
 
               <!-- Titulo Column -->
