--- a/src/app/paginas/juego/juego.component.html
+++ b/src/app/paginas/juego/juego.component.html
@@ -2844,7 +2844,7 @@
                 <div class="btnCambiarStep">
                   <button type="button" class="btn Back" (click)="BorrarObjetosYPreguntasActivas()" matStepperPrevious>Atrás</button>
                   <button style="width: 60%" type="button" class="btn Aceptar"
-                    (click)="CrearJuegoDeEscaperoom()">Crear juego de escaperoom</button>
+                    (click)="CrearJuegoEscaperoom()">Crear juego de escaperoom</button>
                 </div>
               </mat-step>
 
